Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52654

VXYModelMapper fails silently with invalid c++ model

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.2
    • 5.7.0 Alpha
    • Charts
    • None
    • Qt 5.7 from git
    • 704fe5cb96d56088b34aceec723c9b16e67f6a8a

    Description

                      LineSeries {
                          VXYModelMapper {
                              model: myCppModel
                              xColumn: 0
                              yColumn: 1
                          }
                      }

      And the c++ model:

      int MyCppModel::columnCount(const QModelIndex& parent) const
      {
          return 1; // yColumn: 1 fails
      }
      

      current: There is no output at all, the LineSeries just doesnt show up
      expected: qml console output or similar with error message

      Attachments

        For Gerrit Dashboard: QTBUG-52654
        # Subject Branch Project Status CR V

        Activity

          People

            e0348803 Miikka Heikkinen
            alexander_lanin Alexander
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes