Print console warning when invalid row/column used in model mapper

Task-number: QTBUG-52654
Change-Id: I37fac883307409da349c1923c0e295caa9cf6f8a
Reviewed-by: Mika Salmela <mika.salmela@qt.io>
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>